<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/mediaPreview" android:layout_width="match_parent" android:layout_height="match_parent"
        android:scaleType="fitCenter" android:importantForAccessibility="no" />
    <androidx.media3.ui.PlayerView android:id="@+id/videoPlayer" android:layout_width="match_parent" android:layout_height="match_parent"
        android:visibility="gone" app:use_controller="true" app:controller_layout_id="@layout/video_controls"
        app:show_timeout="0" app:hide_on_touch="false" app:show_buffering="when_playing"
        app:surface_type="texture_view" app:resize_mode="fit" />
    <com.google.android.material.button.MaterialButton android:id="@+id/videoToggle" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal" android:layout_margin="16dp" android:minHeight="48dp"
        android:text="@string/play_video" android:visibility="gone" />
</FrameLayout>
